src/app.css
:root {
	--color-blue-200: #c3ddfd;
	--color-blue-500: #3f83f8;
	--color-blue-600: #1c64f2;
	--color-blue-700: #1a56db;
	--color-blue-900: #233876;
	--color-gray-050: #f9fafb;
	--color-gray-100: #f3f4f6;
	--color-gray-200: #e5e7eb;
	--color-gray-300: #e2e2ea;
	--color-gray-400: #d5d5dc;
	--color-gray-500: #6b7280;
	--color-gray-800: #1f2a37;
	--color-green-050: #f3faf7;
	--color-green-500: #0e9f6e;
	--color-green-700: #046c4e;
	--color-red-050: #fdf2f2;
	--color-red-300: #f8b4b4;
	--color-red-500: #f05252;
	--color-red-700: #c81e1e;
	--color-primary: var(--color-blue-700);

	--shadow-md: 0px 4px 6px -1px rgba(0, 0, 0, 0.1), 0px 2px 4px -2px rgba(0, 0, 0, 0.05);
	--shadow-lg: 0px 10px 15px -3px rgba(0, 0, 0, 0.1), 0px 4px 6px rgba(0, 0, 0, 0.05);
	--shadow-xl: 0px 20px 25px -5px rgba(0, 0, 0, 0.1), 0px 10px 10px rgba(0, 0, 0, 0.04);
	--shadow-2xl: 0px 25px 50px -12px rgba(0, 0, 0, 0.25);

	--focus-color: var(--color-blue-900);
	--hover-color: var(--color-gray-400);
	--active-color: var(--color-blue-200);
	--button-border-color: #d1d5db;

	--nav-height: 65px;
}

/* Box sizing rules */
*,
*::before,
*::after {
	box-sizing: border-box;
}

/* Remove default margin */
body,
h1,
h2,
h3,
h4,
p,
figure,
blockquote,
ul,
ol,
dl,
dd {
	margin: 0;
}

/* Remove list styles on ul, ol elements with a list role, which suggests default styling will be removed */
ul,
ol {
	list-style: none;
	padding-left: 0;
}

/* Set core root defaults */
html:focus-within {
	scroll-behavior: smooth;
}

/* Set core body defaults */
body {
	color: var(--color-gray-800);
	font-family: 'Inter', sans-serif;
	font-size: 100%;
	font-style: normal;
	font-weight: 400;
	line-height: 1.5;
	min-height: 100vh;
	text-rendering: optimizeSpeed;
}

/* Links */
a {
	color: inherit;
	text-decoration: none;
}

/* Make images easier to work with */
img,
picture,
svg {
	max-width: 100%;
	display: block;
}

/* Inherit fonts for inputs and buttons */
input,
button,
textarea,
select {
	font: inherit;
}

/* Remove all animations, transitions and smooth scroll for people that prefer not to see them */
@media (prefers-reduced-motion: reduce) {
	html:focus-within {
		scroll-behavior: auto;
	}

	*,
	*::before,
	*::after {
		animation-duration: 0.01ms !important;
		animation-iteration-count: 1 !important;
		transition-duration: 0.01ms !important;
		scroll-behavior: auto !important;
	}
}

/* Button styles */
button,
.button {
	--bg-color: transparent;
	--padding-x: 19px;
	--padding-y: 9px;

	background-color: var(--bg-color);
	border: solid 1px var(--button-border-color);
	border-radius: 8px;
	display: inline-block;
	font-weight: 500;
	padding: var(--padding-y) var(--padding-x);
	margin: 0;
}

button.primary,
.button.primary {
	--bg-color: var(--color-primary);
	--button-border-color: var(--color-primary);

	color: white;
}

button.quiet,
.button.quiet {
	--bg-color: transparent;
	--button-border-color: transparent;
}

button:hover,
.button:hover {
	--bg-color: var(--hover-color);
	--button-border-color: inherit;
}

button.quiet:hover,
.button.quiet:hover {
	--hover-color: transparent;
}

button:focus,
.button:focus {
	outline: 3px solid var(--focus-color);
}

button:active,
.button:active,
button.is-active,
.button.is-active {
	--bg-color: var(--color-gray-300);
}

button:disabled,
.button:disabled {
	--bg-color: var(--color-gray-100);
	--button-border-color: var(--color-gray-100);
}

button.primary:disabled,
.button.primary:disabled {
	--bg-color: var(--color-gray-300);
	--button-border-color: var(--color-gray-300);
}

/* Button group */
.button-group {
	display: flex;
}

.button-group > li {
	display: block;
}

.button-group > li > button,
.button-group > li > .button {
	border: none;
	border-radius: 0;
}

.button-group > li {
	border: solid 1px var(--button-border-color);
	border-right-width: 0;
}

.button-group > li:first-child {
	border-radius: 6px 0 0 6px;
}

.button-group > li:last-child {
	border-radius: 0 6px 6px 0;
	border-right-width: 1px;
}

.button-group button:focus,
.button-group .button:focus {
	background-color: var(--hover-color);
	outline: none;
}

/* Form controls */
label {
	font-weight: 500;
}

input[type="text"],
select,
textarea {
	appearance: none;
	background-color: var(--color-gray-050);
	border: solid 1px var(--color-gray-300);
	border-radius: 8px;
	color: var(--color-gray-500);
	display: block;
	font-size: 1rem;
	font-weight: 400;
	line-height: 1.2;
	padding: 12px 16px;
	width: 100%;
}

select {
	background: url(/src/lib/assets/chevron-down.svg);
	background-position: right 12px center;
	background-repeat: no-repeat;
	background-size: 18px;
}

textarea {
	min-height: 81px;
	resize: vertical;
}

input[type="text"]:active,
select:active,
textarea:active {
	border-color: var(--color-blue-600);
}

input[type="text"]:invalid,
select:invalid,
textarea:invalid {
	background-color: var(--color-red-050);
	border-color: var(--color-red-500);
	color: var(--color-red-700);
}

input[type="text"]:valid,
select:valid,
textarea:valid {
	background-color: var(--color-green-050);
	border-color: var(--color-green-500);
	color: var(--color-green-700);
}

label > input[type='checkbox'],
label > input[type='radio'] {
	margin-right: 8px;
	vertical-align: top;
}

label:has(> input[type='checkbox'], > input[type='radio']) {
	display: block;
	line-height: 1.2em;
	overflow: hidden;
	text-overflow: ellipsis;
	white-space: nowrap;
}

fieldset {
	border: solid 1px var(--color-gray-300);
	border-radius: 8px;
	margin-inline: 0;
	min-width: 0;
	padding: 12px 16px;
}

/* SVG icons */
.icon-20 {
	--size: 20px;

	height: var(--size);
	width: var(--size);
}

.icon-24 {
	--size: 24px;

	height: var(--size);
	width: var(--size);
}

.icon-32 {
	--size: 32px;

	height: var(--size);
	width: var(--size);
}

/* Avatars */
.avatar {
	background-color: var(--color-blue-500);
	border-radius: 50%;
	display: inline-block;
	font-size: var(--font-size);
	height: calc(2 * var(--radius));
	line-height: 1;
	padding: calc(var(--radius) - var(--font-size) / 2) 0;
	text-align: center;
	width: calc(2 * var(--radius));
}

.avatar.avatar-s {
	--radius: 1rem;
	--font-size: 0.75rem;
}

.avatar.avatar-m {
	--radius: 1.5rem;
	--font-size: 1rem;
}

/* Container details page and form */
.details {
	background-color: white;
	border-radius: 8px;
	border: 1px solid var(--color-gray-200);
	box-shadow: var(--shadow-lg);
	height: calc(100% - 1rem);
}

@media (min-width: 768px) {
	.details {
		padding: 2rem 4rem;
	}
}

.details header {
	align-items: center;
	border-bottom: solid 1px var(--color-gray-300);
	display: flex;
	flex-direction: row;
	justify-content: space-between;
	margin-bottom: 24px;
	padding: 24px;
}

.details header h2,
.details header label {
	flex-grow: 1;
	font-size: 1.125rem;
	font-weight: 600;
}

.details header .icons {
	display: flex;
	gap: 16px;
}

.details-content {
	color: var(--color-gray-500);
	display: flex;
	flex-direction: column;
	gap: 1.5rem;
	padding: 0 24px;
}

.details-content:before {
	border-bottom: 1px solid var(--color-gray-300);
	content: '';
	margin: 0 -24px;
}

.details-content > :first-child {
	order: -1;
}

.details-content-column {
	display: flex;
	flex-direction: column;
	flex: 1 1 100%;
	gap: 18px;
}

@media (min-width: 1440px) {
	.details header {
		margin-bottom: 0;
	}

	.details-content {
		flex-direction: row;
	}

	.details-content:before {
		border-left: 1px solid var(--color-gray-300);
		content: '';
		margin: initial;
	}

	.details-content-column {
		padding-top: 24px;
	}
}

.details h3 {
	color: var(--color-gray-800);
	font-size: inherit;
	font-weight: 500;
}

.details footer {
	padding: 24px;
}

/* Utility classes */
.is-hidden {
	display: none;
}

